--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -697,7 +697,7 @@ Zowel per design als via k-fold validation lijkt het random intercept onze voork
 
 -   De Poisson verdeling kan gebruikt worden om de aantallen te modelleren
 -   Er is een vrij groot verschil tussen beide regio's waardoor we quasi voor elke variabele een interactieterm zouden moeten toevoegen. We zouden best de analyses opsplitsen per gebied.
--   We willen nagaan of er een positief effect is van beschermingsmaatregelen. Zowel ter interpretatie als eenvoud van het model kan de `sbp` variabele misschien handiger zijn dan de `area_opp_sb` variabele.
+-   We willen nagaan of er een positief effect is van beschermingsmaatregelen. Zowel ter interpretatie als eenvoud van het model kan de `sbp` variabele misschien handiger zijn dan de `area_prop_sb` variabele.
 -   De variabele `periode_in_jaar` vermoeilijkt de analyses (toevoegen van random effects). Het is allicht slimmer de aantallen per telcirkel per jaar te aggregeren. @klaassen2022 gebruiken voor gelijkaardige analyses *"het maximumaantal waargenomen broedparen (het hoogste aantal territoriale individuen van een soort tijdens één van de tellingen)"*.
 -   We vermoeden ook dat er een duidelijker signaal zal vormen als we enkel de data van 2022 en 2023 bekijken.
 
@@ -2334,73 +2334,9 @@ df_count_list_dmtotal_scaled <- lapply(df_count_list_dmtotal, function(df) {
   })
 ```
 
-# Oostelijke leemstreek 2022-2023: sbp
-
-We bekijken eerst het effect van `sbp`.
-
-```{r}
-doel_soorten_ol_pre <- c(
-  "Veldleeuwerik", 
-  "Gele Kwikstaart", 
-  "Geelgors", 
-  "Kievit", 
-  "Grasmus",
-  "Witte Kwikstaart",
-  "Ringmus",
-  "Torenvalk",
-  "Kwartel",
-  "Kneu",
-  "Haas")
-```
-
-Onze doelsoorten zijn `r doel_soorten_ol_pre`.
-
-## Lijst van datasets
-
-
-```{r}
-df_count_list <- create_data_list(doel_soorten_ol_pre,
-                                  "Oostelijke leemstreek",
-                                  2022:2023)
-```
-
-Voor Ringmus hebben we bijna geen data.
-We zullen deze soort niet opnemen in de analyses van de Oostelijke leemstreek.
-
-```{r}
-for (i in seq_along(df_count_list)) {
-  df <- df_count_list[[i]]
-  spec <- names(df_count_list)[i]
-  
-  p <- df %>%
-    ggplot(aes(x = aantal, fill = sbp)) +
-      geom_bar() +
-      facet_wrap(~sbp) +
-      scale_x_continuous(breaks = seq(0, max(df$aantal))) +
-      labs(x = "aantal", 
-           y = "frequentie",
-           title = spec) +
-      theme(legend.position = "")
-  
-  print(p)
-}
-```
-
-```{r}
-df_count_list[["Ringmus"]] <- NULL
-```
-
-We centreren en schalen de continue variabelen.
-
-```{r}
-df_count_list_scaled <- lapply(df_count_list, function(df) {
-    df %>%
-      mutate(across(.cols = c(where(is.numeric), -c(id, aantal, jaar)), 
-                    .fns = ~ as.numeric(scale(.x))))
-  })
-```
-
 ## Fit referentiemodellen
+
+We sample the posterior distributions for the models with three Markov chain Monte Carlo (MCMC) chains, each of which is run for 8,000 iterations, of which the first 2,000 were removed as burn-in. The chains were thinned by 3 to yield 2,000 posterior samples per chain and so 6,000 posterior samples in total.
 
 ```{r}
 # MCMC parameters
@@ -2408,46 +2344,75 @@ nchains <- 3           # number of chains
 niter <- 8000         # number of iterations (incl. burn-in)
 burnin <- niter / 4    # number of initial samples to discard (burn-in)
 nparallel <- nchains   # number of cores used for parallel computing
-thinning <- 2
+thinning <- 3
 ```
 
-```{r}
-# Formula
-indices_to_remove_olsbp <- which(names(df_count_list$GeleKwikstaart) %in% c(
-  "id", 
-  "aantal", 
-  "plotnaam", 
-  "regio",
-  "jaar",
-  "area_prop_sb_cat",
-  "x_plot",
-  "y_plot",
-  "is_sbp",
-  "openheid_klasse_300"))
-
-predictors_olsbp <- names(df_count_list$GeleKwikstaart)[-indices_to_remove_olsbp]
-
-form_refmod_olsbp <- bf(paste("aantal", "~", paste(predictors_olsbp, 
-                                                   collapse = " + ")))
-form_refmod_olsbp
-```
+We use the R2D2 prior.
 
 ```{r}
 R2D2_prior <- set_prior(R2D2(mean_R2 = 0.5, prec_R2 = 2, cons_D2 = 1, 
                              autoscale = TRUE))
 ```
 
-```{r}
-refmod_olsbp_list <- vector("list", length = length(df_count_list_scaled))
-refmod_olsbp_names <- vector(length = length(df_count_list_scaled))
+Model formula to investigate the effect of `sbp`:
 
-for (i in seq_along(df_count_list_scaled)) {
-  spec <- names(df_count_list_scaled)[i]
-  name <- paste0("refmod_olsbp_", spec)
+```{r}
+indices_to_remove_sbp <- which(names(df_count_list_olnew$GeleKwikstaart) %in% c(
+  "id", 
+  "aantal", 
+  "plotnaam", 
+  "regio",
+  "jaar",
+  "area_prop_sb",
+  "x_plot",
+  "y_plot",
+  "is_sbp",
+  "openheid_klasse_300"))
+
+predictors_sbp <- names(df_count_list_olnew$GeleKwikstaart)[-indices_to_remove_sbp]
+
+form_refmod_sbp <- bf(paste("aantal", "~", paste(predictors_sbp,
+                                                 collapse = " + ")))
+form_refmod_sbp
+```
+
+Model formula to investigate the effect of `area_prop_sb` (categorised):
+
+```{r}
+indices_to_remove_propsb <- which(names(df_count_list_olnew$GeleKwikstaart) %in% c(
+  "id", 
+  "aantal", 
+  "plotnaam", 
+  "regio",
+  "jaar",
+  "area_prop_sb",
+  "x_plot",
+  "y_plot",
+  "is_sbp", "sbp",
+  "openheid_klasse_300"))
+
+predictors_propsb <- names(df_count_list_olnew$GeleKwikstaart)[-indices_to_remove_propsb]
+
+form_refmod_propsb <- bf(paste("aantal", "~", paste(predictors_propsb,
+                                                    collapse = " + ")))
+form_refmod_propsb
+```
+
+### Oostelijke leemstreek 2022-2023
+#### sbp
+
+```{r}
+refmod_olsbp_new_list <- vector("list",
+                                length = length(df_count_list_olnew_scaled))
+refmod_olsbp_new_names <- vector(length = length(df_count_list_olnew_scaled))
+
+for (i in seq_along(df_count_list_olnew_scaled)) {
+  spec <- names(df_count_list_olnew_scaled)[i]
+  name <- paste0("refmod_olsbp_new_", spec)
   print(paste("Busy fitting", name, "..."))
   assign(name,
-         brm(formula = form_refmod_olsbp,
-             data = df_count_list_scaled[[i]], 
+         brm(formula = form_refmod_sbp,
+             data = df_count_list_olnew_scaled[[i]], 
                family = poisson(),
                prior = R2D2_prior,
                chains = nchains, 
@@ -2460,21 +2425,204 @@ for (i in seq_along(df_count_list_scaled)) {
                file = paste0(model_path, name),
                file_refit = "on_change"))
   
-  refmod_olsbp_list[[i]] <- get(name)
-  refmod_olsbp_names[i] <- spec
+  refmod_olsbp_new_list[[i]] <- get(name)
+  refmod_olsbp_new_names[i] <- spec
 }
 
-names(refmod_olsbp_list) <- refmod_olsbp_names
+names(refmod_olsbp_new_list) <- refmod_olsbp_new_names
 ```
+
+#### area_prop_sb (categorised)
+
+```{r}
+refmod_olpropsb_new_list <- vector("list",
+                                length = length(df_count_list_olnew_scaled))
+refmod_olpropsb_new_names <- vector(length = length(df_count_list_olnew_scaled))
+
+for (i in seq_along(df_count_list_olnew_scaled)) {
+  spec <- names(df_count_list_olnew_scaled)[i]
+  name <- paste0("refmod_olpropsb_new_", spec)
+  print(paste("Busy fitting", name, "..."))
+  assign(name,
+         brm(formula = form_refmod_propsb,
+             data = df_count_list_olnew_scaled[[i]], 
+               family = poisson(),
+               prior = R2D2_prior,
+               chains = nchains, 
+               warmup = burnin, 
+               iter = niter,
+               cores = nparallel,
+               thin = thinning,
+               sample_prior = TRUE,
+               backend = "cmdstanr",
+               file = paste0(model_path, name),
+               file_refit = "on_change"))
+  
+  refmod_olpropsb_new_list[[i]] <- get(name)
+  refmod_olpropsb_new_names[i] <- spec
+}
+
+names(refmod_olpropsb_new_list) <- refmod_olpropsb_new_names
+```
+
+
+### De Moeren 2022-2023
+#### sbp
+
+```{r}
+refmod_dmsbp_new_list <- vector("list",
+                                length = length(df_count_list_dmnew_scaled))
+refmod_dmsbp_new_names <- vector(length = length(df_count_list_dmnew_scaled))
+
+for (i in seq_along(df_count_list_dmnew_scaled)) {
+  spec <- names(df_count_list_dmnew_scaled)[i]
+  name <- paste0("refmod_dmsbp_new_", spec)
+  print(paste("Busy fitting", name, "..."))
+  assign(name,
+         brm(formula = form_refmod_sbp,
+             data = df_count_list_dmnew_scaled[[i]], 
+               family = poisson(),
+               prior = R2D2_prior,
+               chains = nchains, 
+               warmup = burnin, 
+               iter = niter,
+               cores = nparallel,
+               thin = thinning,
+               sample_prior = TRUE,
+               backend = "cmdstanr",
+               file = paste0(model_path, name),
+               file_refit = "on_change"))
+  
+  refmod_dmsbp_new_list[[i]] <- get(name)
+  refmod_dmsbp_new_names[i] <- spec
+}
+
+names(refmod_dmsbp_new_list) <- refmod_dmsbp_new_names
+```
+
+#### area_prop_sb (categorised)
+
+```{r}
+refmod_dmpropsb_new_list <- vector("list",
+                                length = length(df_count_list_dmnew_scaled))
+refmod_dmpropsb_new_names <- vector(length = length(df_count_list_dmnew_scaled))
+
+for (i in seq_along(df_count_list_dmnew_scaled)) {
+  spec <- names(df_count_list_dmnew_scaled)[i]
+  name <- paste0("refmod_dmpropsb_new_", spec)
+  print(paste("Busy fitting", name, "..."))
+  assign(name,
+         brm(formula = form_refmod_propsb,
+             data = df_count_list_dmnew_scaled[[i]], 
+               family = poisson(),
+               prior = R2D2_prior,
+               chains = nchains, 
+               warmup = burnin, 
+               iter = niter,
+               cores = nparallel,
+               thin = thinning,
+               sample_prior = TRUE,
+               backend = "cmdstanr",
+               file = paste0(model_path, name),
+               file_refit = "on_change"))
+  
+  refmod_dmpropsb_new_list[[i]] <- get(name)
+  refmod_dmpropsb_new_names[i] <- spec
+}
+
+names(refmod_dmpropsb_new_list) <- refmod_dmpropsb_new_names
+```
+
+
+### Oostelijke leemstreek 2018-2023
+
+```{r}
+refmod_ol_total_list <- vector("list",
+                                length = length(df_count_list_oltotal_scaled))
+refmod_ol_total_names <- vector(length = length(df_count_list_oltotal_scaled))
+
+for (i in seq_along(df_count_list_oltotal_scaled)) {
+  spec <- names(df_count_list_oltotal_scaled)[i]
+  name <- paste0("refmod_ol_total_", spec)
+  print(paste("Busy fitting", name, "..."))
+  assign(name,
+         brm(formula = form_refmod_sbp,
+             data = df_count_list_oltotal_scaled[[i]], 
+               family = poisson(),
+               prior = R2D2_prior,
+               chains = nchains, 
+               warmup = burnin, 
+               iter = niter,
+               cores = nparallel,
+               thin = thinning,
+               sample_prior = TRUE,
+               backend = "cmdstanr",
+               file = paste0(model_path, name),
+               file_refit = "on_change"))
+  
+  refmod_ol_total_list[[i]] <- get(name)
+  refmod_ol_total_names[i] <- spec
+}
+
+names(refmod_ol_total_list) <- refmod_ol_total_names
+```
+
+### De Moeren 2018-2023
+
+```{r}
+refmod_dm_total_list <- vector("list",
+                                length = length(df_count_list_dmtotal_scaled))
+refmod_dm_total_names <- vector(length = length(df_count_list_dmtotal_scaled))
+
+for (i in seq_along(df_count_list_dmtotal_scaled)) {
+  spec <- names(df_count_list_dmtotal_scaled)[i]
+  name <- paste0("refmod_dm_total_", spec)
+  print(paste("Busy fitting", name, "..."))
+  assign(name,
+         brm(formula = form_refmod_sbp,
+             data = df_count_list_dmtotal_scaled[[i]], 
+             family = poisson(),
+             prior = R2D2_prior,
+             chains = nchains, 
+             warmup = burnin, 
+             iter = niter,
+             cores = nparallel,
+             thin = thinning,
+             sample_prior = TRUE,
+             backend = "cmdstanr",
+             file = paste0(model_path, name),
+             file_refit = "on_change"))
+  
+  refmod_dm_total_list[[i]] <- get(name)
+  refmod_dm_total_names[i] <- spec
+}
+
+names(refmod_dm_total_list) <- refmod_dm_total_names
+```
+
+
+## Model fit
 
 Niet altijd een goede fit:
 
 ```{r}
-for (i in seq_along(refmod_olsbp_list)) {
-  title <- paste("Fit referentiemodel", names(refmod_olsbp_list)[i])
-  ref_mod <- refmod_olsbp_list[[i]]
-  print(pp_check(ref_mod, type = "bars", ndraws = 200) +
-          ggtitle(title))
+refmodel_meta_list <- list(
+  "Oostelijke leemstreek 2022-2023 (sbp)" = refmod_olsbp_new_list,
+  "Oostelijke leemstreek 2022-2023 (prop sb)" = refmod_olpropsb_new_list,
+  "De Moeren 2022-2023 (sbp)" = refmod_dmsbp_new_list,
+  "De Moeren 2022-2023 (prop sb)" = refmod_dmpropsb_new_list,
+  "Oostelijke leemstreek 2018-2023" = refmod_ol_total_list,
+  "De Moeren 2018-2023" = refmod_dm_total_list)
+
+for (i in seq_along(refmodel_meta_list)) {
+  mod_list <- refmodel_meta_list[[i]]
+  name <- names(mod_list)[i]
+  for (i in seq_along(mod_list)) {
+    title <- paste("Fit", name, "-", names(mod_list)[i])
+    ref_mod <- mod_list[[i]]
+    print(pp_check(ref_mod, type = "bars", ndraws = 200) +
+            ggtitle(title))
+  }
 }
 ```
 
@@ -2816,251 +2964,6 @@ for (pred in predictors_olsbp_list$WitteKwikstaart$predictors) {
 }
 ```
 
-# Oostelijke leemstreek 2022-2023: area_prop_sb
 
-We doen hetzelfde, maar nu beschouwen we `area_prop_sb` in plaats van de `sbp` variabele.
-
-```{r}
-# Formula
-indices_to_remove2 <- which(names(df_count_list$GeleKwikstaart) %in% c(
-  "id", 
-  "aantal", 
-  "plotnaam", 
-  "regio",
-  "jaar",
-  "area_prop_sb",
-  "x_plot",
-  "y_plot",
-  "is_sbp", "sbp",
-  "openheid_klasse_300"))
-
-predictors_olpropsb <- names(df_count_list$GeleKwikstaart)[-indices_to_remove2]
-
-form_refmod_olpropsb <- bf(paste("aantal", "~", paste(predictors_olpropsb, 
-                                                   collapse = " + ")))
-form_refmod_olpropsb
-```
-
-```{r}
-refmod_olpropsb_list <- vector("list", length = length(df_count_list_scaled))
-refmod_olpropsb_names <- vector(length = length(df_count_list_scaled))
-
-for (i in seq_along(df_count_list_scaled)) {
-  spec <- names(df_count_list_scaled)[i]
-  name <- paste0("refmod_olpropsb_", spec)
-  print(paste("Busy fitting", name, "..."))
-  assign(name,
-         brm(formula = form_refmod_olpropsb,
-             data = df_count_list_scaled[[i]], 
-               family = poisson(),
-               prior = R2D2_prior,
-               chains = nchains, 
-               warmup = burnin, 
-               iter = niter,
-               cores = nparallel,
-               thin = thinning,
-               sample_prior = TRUE,
-               backend = "cmdstanr",
-               file = paste0(model_path, name),
-               file_refit = "on_change"))
-  
-  refmod_olpropsb_list[[i]] <- get(name)
-  refmod_olpropsb_names[i] <- spec
-}
-
-names(refmod_olpropsb_list) <- refmod_olpropsb_names
-```
-
-Niet altijd een goede fit:
-
-```{r}
-for (i in seq_along(refmod_olpropsb_list)) {
-  title <- paste("Fit referentiemodel", names(refmod_olpropsb_list)[i])
-  ref_mod <- refmod_olpropsb_list[[i]]
-  print(pp_check(ref_mod, type = "bars", ndraws = 200) +
-          ggtitle(title))
-}
-```
-
-```{r}
-search_terms_olpropsb <- get_search_terms(
-  n_predictors_max = 2, 
-  predictors = predictors_olpropsb[-match("area_prop_sb_cat", predictors_olpropsb)],
-  keep_var = "area_prop_sb_cat")
-```
-
-```{r, eval=FALSE}
-cvvs_olpropsb_list <- vector("list", length = length(refmod_olpropsb_list))
-cvvs_olpropsb_names <- vector(length = length(refmod_olpropsb_list))
-
-for (i in seq_along(refmod_olpropsb_list)) {
-  spec <- names(refmod_olpropsb_list)[i]
-  name <- paste0("cvvs_olpropsb_", spec)
-  print(paste("Busy with", name, "..."))
-  
-  cvvs_file <- paste0(projpred_path, name, ".rds")
-  if (!file.exists(cvvs_file)) {
-    assign(name, 
-           cv_varsel(
-             object          = refmod_olpropsb_list[[i]],
-             method          = "forward",
-             cv_method       = "LOO",
-             search_terms    = search_terms_olpropsb,
-             validate_search = TRUE))
-    saveRDS(get(name), cvvs_file)
-  } else {
-    assign(name, readRDS(cvvs_file))
-  }
-  
-  cvvs_olpropsb_list[[i]] <- get(name)
-  cvvs_olpropsb_names[i] <- spec
-}
-
-names(cvvs_olpropsb_list) <- cvvs_olpropsb_names
-```
-
-```{r, eval=FALSE}
-for (i in seq_along(cvvs_olpropsb_list)) {
-  title <- names(cvvs_olpropsb_list)[i]
-  if (!title == "FALSE") {
-    print(plot(cvvs_olpropsb_list[[i]], stats = "mlpd", deltas = TRUE, 
-               ranking_abbreviate = TRUE, 
-               ranking_abbreviate_args = list(minlength = 4)) +
-             ggtitle(title))
-    
-    smmry <- summary(cvvs_olpropsb_list[[i]], stats = "mlpd", 
-                 type = c("mean", "lower", "upper"),
-                 deltas = TRUE)
-    print(smmry, digits = 1)
-    
-    rk <- ranking(cvvs_olpropsb_list[[i]])
-    pr_rk <- cv_proportions(rk)
-    
-    print(plot(pr_rk) +
-             ggtitle(title))
-    print(plot(cv_proportions(rk, cumulate = TRUE)) +
-             ggtitle(title))
-  }
-}
-```
-
-# Oostelijke leemstreek totaalanalyse
-
-Voor de totaalanalyse beschouwen we alle plots van 2018-2021 en voegen enkel plots van 2022 en 2023 toe als ze minstens eenmaal geteld zijn in een van de voorgaande jaren (cf. distance sampling analyses).
-We voeren de PPVS uit zonder restricties.
-
-```{r}
-# Get presence-absences for region and year span
-df_count_list_oltotal_raw <- create_data_list(
-  doel_soorten_ol, 
-  "Oostelijke leemstreek", 
-  2018:2023)
-
-# Get plots from 2018-2021
-plots_old <- design %>%
-  filter(regio == "Oostelijke leemstreek",
-         !jaar %in% 2022:2023) %>%
-  distinct(plotnaam) %>%
-  pull()
-
-# Retrieve presence-absence data only from old plots
-df_count_list_oltotal <- lapply(df_count_list_oltotal_raw, function(df) {
-  df %>%
-    filter(plotnaam %in% plots_old)
-  })
-```
-
-Het gaat om zoveel plots (en dus datapunten) per jaar:
-
-```{r}
-df_count_list_oltotal$Geelgors %>%
-  group_by(jaar) %>% summarise(n = n_distinct(plotnaam)) %>%
-  kable()
-```
-
-Scale continuous variables.
-
-```{r}
-df_count_list_oltotal_scaled <- lapply(df_count_list_oltotal, function(df) {
-    df %>%
-      mutate(across(.cols = c(where(is.numeric), -c(id, aantal, jaar)), 
-                    .fns = ~ as.numeric(scale(.x))))
-  })
-```
-
-> testcase Veldleeuwerik
-
-```{r}
-# MCMC parameters
-nchains <- 3           # number of chains
-niter <- 8000         # number of iterations (incl. burn-in)
-burnin <- niter / 4    # number of initial samples to discard (burn-in)
-nparallel <- nchains   # number of cores used for parallel computing
-thinning <- 2
-```
-
-```{r}
-# Formula
-indices_to_remove_oltotal <- which(names(df_count_list_oltotal$GeleKwikstaart) %in% c(
-  "id", 
-  "aantal", 
-  "plotnaam", 
-  "regio",
-  "jaar",
-  "area_prop_sb",
-  "x_plot",
-  "y_plot",
-  "is_sbp",
-  "openheid_klasse_300"))
-
-predictors_oltotal <- names(df_count_list_oltotal$GeleKwikstaart)[-indices_to_remove_oltotal]
-
-form_refmod_oltotal <- bf(paste("aantal", "~", paste(predictors_oltotal, 
-                                                   collapse = " + "),
-                                "+", "(1 | plotnaam)"))
-form_refmod_oltotal
-```
-
-```{r}
-refmod_oltotal_veldleeuwerik <- brm(
-  formula = form_refmod_oltotal,
-  data = df_count_list_oltotal_scaled[["Veldleeuwerik"]], 
-  family = poisson(),
-  prior = R2D2_prior,
-  chains = nchains, 
-  warmup = burnin, 
-  iter = niter,
-  cores = nparallel,
-  thin = thinning,
-  sample_prior = TRUE,
-  backend = "cmdstanr")
-```
-
-```{r}
-pp_check(refmod_oltotal_veldleeuwerik, type = "bars", ndraws = 200)
-```
-
-```{r}
-cvvs_olsbp_veldleeuwerik_fast <- cv_varsel(
-  refmod_oltotal_veldleeuwerik,
-  ### Only for the sake of speed (not recommended in general):
-  nclusters_pred = 20,
-  validate_search = FALSE)
-```
-
-```{r}
-cvvs_olsbp_veldleeuwerik <- cv_varsel(
-  object          = refmod_oltotal_veldleeuwerik,
-  method          = "forward",
-  cv_method       = "LOO",
-  nterms_max      = 19,
-  validate_search = TRUE)
-```
-
-# De Moeren 2022: sbp
-
-# De Moeren 2023: area_prop_sb
-
-# De Moeren totaalanalyse
 
 # Referenties
