model selection 2018-2023 complex models

--- a/src/markdown/mas/distance_sampling.Rmd
+++ b/src/markdown/mas/distance_sampling.Rmd
@@ -2894,14 +2894,17 @@ for (naam in names(all_models)) {
 ```{r}
 final_models_complex <- list(
   Blauwborst = Blauwborst_distmod_2018_2023_hn1,
+  BlauweKiekendief_zonder_broedcode = BlauweKiekendief_zonder_broedcode_distmod_2018_2023_hn1,
   BruineKiekendief = BruineKiekendief_distmod_2018_2023_hn1,
   BruineKiekendief_zonder_broedcode = BruineKiekendief_zonder_broedcode_distmod_2018_2023_hn1,
-  Ekster = Ekster_distmod_2018_2023_hr1,
+  Buizerd = Buizerd_distmod_2018_2023_hn1,
+  Buizerd_zonder_broedcode = Buizerd_zonder_broedcode_distmod_2018_2023_hn1,
+  Ekster = Ekster_distmod_2018_2023_hn1,
   Fazant = Fazant_distmod_2018_2023_hr1,
   Gaai = Gaai_distmod_2018_2023_hn1,
   Geelgors = Geelgors_distmod_2018_2023_hr1,
   GeleKwikstaart = GeleKwikstaart_distmod_2018_2023_hr3,
-  Grasmus = Grasmus_distmod_2018_2023_hr1,
+  Grasmus = Grasmus_distmod_2018_2023_hn1,
   GrauweGors = GrauweGors_distmod_2018_2023_hn1,
   GroeneSpecht = GroeneSpecht_distmod_2018_2023_hn1,
   GroteBonteSpecht = GroteBonteSpecht_distmod_2018_2023_hn1,
@@ -2909,30 +2912,30 @@ final_models_complex <- list(
   Heggenmus = Heggenmus_distmod_2018_2023_hn1,
   Holenduif = Holenduif_distmod_2018_2023_hn1,
   Houtduif = Houtduif_distmod_2018_2023_hn3,
-  Huismus = Huismus_distmod_2018_2023_hn1,
+  Huismus = Huismus_distmod_2018_2023_hr2,
   Kauw = Kauw_distmod_2018_2023_hr1,
   Kievit = Kievit_distmod_2018_2023_hr1,
   KleineKarekiet = KleineKarekiet_distmod_2018_2023_hn1,
-  Kneu = Kneu_distmod_2018_2023_hr1,
+  Kneu = Kneu_distmod_2018_2023_hn1,
   Koolmees = Koolmees_distmod_2018_2023_hn1,
   Kwartel = Kwartel_distmod_2018_2023_hn1,
   Meerkoet = Meerkoet_distmod_2018_2023_hn1,
   Merel = Merel_distmod_2018_2023_hr1,
   Patrijs = Patrijs_distmod_2018_2023_hn1,
-  Pimpelmees = Pimpelmees_distmod_2018_2023_hr1,
-  Rietzanger = Rietzanger_distmod_2018_2023_hn1,
+  Pimpelmees = Pimpelmees_distmod_2018_2023_hn1,
+  Rietzanger = Rietzanger_distmod_2018_2023_hn2,
   Roek = Roek_distmod_2018_2023_hn1,
   Spotvogel = Spotvogel_distmod_2018_2023_hn1,
   Spreeuw = Spreeuw_distmod_2018_2023_hr1,
-  Tjiftjaf = Tjiftjaf_distmod_2018_2023_hr2,
-  Torenvalk = Torenvalk_distmod_2018_2023_hr4,
+  Tjiftjaf = Tjiftjaf_distmod_2018_2023_hr1,
+  Torenvalk = Torenvalk_distmod_2018_2023_hn1,
   Torenvalk_zonder_broedcode = Torenvalk_zonder_broedcode_distmod_2018_2023_hn1,
-  TurkseTortel = TurkseTortel_distmod_2018_2023_hr1,
+  TurkseTortel = TurkseTortel_distmod_2018_2023_hn1,
   Veldleeuwerik = Veldleeuwerik_distmod_2018_2023_hr4,
   Vink = Vink_distmod_2018_2023_hn1,
   WildeEend = WildeEend_distmod_2018_2023_hn1,
   Winterkoning = Winterkoning_distmod_2018_2023_hn1,
-  WitteKwikstaart = WitteKwikstaart_distmod_2018_2023_hn3,
+  WitteKwikstaart = WitteKwikstaart_distmod_2018_2023_hn1,
   Zanglijster = Zanglijster_distmod_2018_2023_hr1,
   ZwarteKraai = ZwarteKraai_distmod_2018_2023_hn1,
   ZwarteRoodstaart = ZwarteRoodstaart_distmod_2018_2023_hn1,
@@ -2958,10 +2961,10 @@ specs_to_remove[sapply(specs_to_remove, is.null)] <- NULL
 specs_to_remove <- unlist(specs_to_remove)
 
 # Verwijder soorten uit simpele dataset
-distance_dfs_2022_simpel_new <- 
+distance_dfs_2018_2022_simpel_new <- 
   distance_dfs_2018_2022_simpel[!names(distance_dfs_2018_2022_simpel) %in% 
                                 specs_to_remove]
-names(distance_dfs_2022_simpel_new)
+names(distance_dfs_2018_2022_simpel_new)
 ```
 
 ```{r}
@@ -2972,12 +2975,13 @@ final_models_simpel <- list()
 final_models_simpel_names <- c()
 
 # Verwijder
-index_to_remove_simpel <- which(names(distance_dfs_2022_simpel_new) %in% 
-                                  c("GroteBonteSpecht", "Zanglijster"))
+#index_to_remove_simpel <- which(names(distance_dfs_2018_2022_simpel_new) %in% 
+#                                  c("GroteBonteSpecht", "Zanglijster"))
      
 # Fit opnieuw met simpele dataset
-for (spec in names(distance_dfs_2022_simpel_new)[-index_to_remove_simpel]) {
-  distance_data_new <- distance_dfs_2022_simpel_new[[spec]]
+#for (spec in names(distance_dfs_2018_2022_simpel_new)[-index_to_remove_simpel]) {
+for (spec in names(distance_dfs_2018_2022_simpel_new)) {
+  distance_data_new <- distance_dfs_2018_2022_simpel_new[[spec]]
   sample_table_2018_2022 <- sample_tables_2018_2022[[spec]]
   obs_table_2018_2022 <- obs_tables_2018_2022[[spec]]
   
