--- a/src/markdown/mas/distance_sampling.Rmd
+++ b/src/markdown/mas/distance_sampling.Rmd
@@ -3126,7 +3126,7 @@ for (naam in names(final_models)) {
   if (f == "~jaar") {
     par(mfrow = c(1, 2))
     
-    cols <- c("blue", "darkgreen", "brown", "salmon", "gold")
+    cols <- c("blue", "darkgreen", "brown", "salmon", "gold", "purple")
     for (i in seq_along(unique(ds_model_2018_2022$ddf$data$jaar))) {
       j <- sort(unique(ds_model_2018_2022$ddf$data$jaar))[i]
       plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
@@ -3158,7 +3158,7 @@ for (naam in names(final_models)) {
   if (f %in% c("~regio + jaar", "~regio * jaar")) {
     par(mfrow = c(1, 2))
     
-    cols <- c("blue", "darkgreen", "brown", "salmon", "gold")
+    cols <- c("blue", "darkgreen", "brown", "salmon", "gold", "purple")
     
     
     for (i in seq_along(unique(ds_model_2018_2022$ddf$data$jaar))) {
@@ -3186,8 +3186,10 @@ for (naam in names(final_models)) {
 #### Problematische soorten
 
 ```{r}
-spec_to_remove <- c("BlauweKiekendief_zonder_broedcode", "GroeneSpecht", 
-                    "GroteBonteSpecht")
+spec_to_remove <- c("GroteBonteSpecht",
+                    "GroeneSpecht",
+                    "Steenuil_zonder_broedcode",
+                    "Huiszwaluw")
 ```
 
 De data voor `r spec_to_remove` passen niet voor distance sampling.
@@ -3207,14 +3209,17 @@ final_models[indices_to_remove] <- NULL
 spec_to_bin <- list(Blauwborst = 6,
                     Bosrietzanger = 3,
                     Graspieper = 4,
+                    GrauweGors = 4,
                     Groenling = 3,
                     Haas = 4,
-                    Holenduif = 3,
+                    Rietgors = 3,
+                    Ringmus = 4,
+                    Roek = 4,
                     Roodborsttapuit = 4,
                     Slechtvalk_zonder_broedcode = 4,
                     Sperwer_zonder_broedcode = 4,
-                    Torenvalk = 6,
-                    Torenvalk_zonder_broedcode = 3,
+                    Torenvalk = 4,
+                    Torenvalk_zonder_broedcode = 6,
                     Tuinfluiter = 3,
                     Veldleeuwerik = 6)
 ```
@@ -3250,7 +3255,7 @@ for (spec in names(spec_to_bin)) {
                  "Formula: '", f, "'. Key: '", k, "'."))
   } else {
     if (f == "~1") {
-      distance_data <- distance_dfs_2022_simpel_new[[spec]]
+      distance_data <- distance_dfs_2018_2022_simpel_new[[spec]]
       det_model <- ds(data = distance_data, key = k, 
         formula = as.formula(f), max_adjustments = 2, 
         monotonicity = "strict", cutpoints = cp,
@@ -3302,7 +3307,7 @@ for (naam in names(final_models_binned)) {
   if (f == "~jaar") {
     par(mfrow = c(1, 2))
     
-    cols <- c("blue", "darkgreen", "brown", "salmon", "gold")
+    cols <- c("blue", "darkgreen", "brown", "salmon", "gold", "purple")
     for (i in seq_along(unique(ds_model_2018_2022$ddf$data$jaar))) {
       j <- sort(unique(ds_model_2018_2022$ddf$data$jaar))[i]
       plot(ds_model_2018_2022, pdf = TRUE, showpoints = FALSE,
@@ -3334,7 +3339,7 @@ for (naam in names(final_models_binned)) {
   if (f %in% c("~regio + jaar", "~regio * jaar")) {
     par(mfrow = c(1, 2))
     
-    cols <- c("blue", "darkgreen", "brown", "salmon", "gold")
+    cols <- c("blue", "darkgreen", "brown", "salmon", "gold", "purple")
     
     
     for (i in seq_along(unique(ds_model_2018_2022$ddf$data$jaar))) {
@@ -3402,7 +3407,7 @@ plot_densiteit <- function(dsmodel, soort, show_data = TRUE) {
   if ("jaar" %in% names(dsmodel$ddf$data)) {
     if (show_data) {
       plots_old <- design_2018_2023_mas %>%
-        filter(jaar != 2022) %>%
+        filter(!jaar %in% 2022:2023) %>%
         distinct(plotnaam) %>%
         pull()
       
@@ -3410,7 +3415,8 @@ plot_densiteit <- function(dsmodel, soort, show_data = TRUE) {
         filter(plotnaam %in% plots_old)
       
       # Totale lijst van bezochte plots in 2018-2022
-      bezoekenlijst_2018_2022 <- design_2018_2023_mas_reduced  %>% 
+      bezoekenlijst_2018_2022 <- design_2018_2023_mas_reduced  %>%
+        select(-periode_in_jaar) %>%
         expand_grid(distinct(spec_presence, periode_in_jaar)) %>%
         arrange(plotnaam, jaar, periode_in_jaar)
       
@@ -3566,7 +3572,7 @@ for (i in seq_along(final_models_update)) {
 Ten slotte schrijven de de finale modellen weg.
 
 ```{r}
-saveRDS(final_models_update, file = paste0(model_path, "models_2018_2022.rds"))
+saveRDS(final_models_update, file = paste0(model_path, "models_2018_2023.rds"))
 ```
 
 ## Densiteitschattingen 2022
@@ -3589,51 +3595,55 @@ for (naam in names(all_models_2022)) {
 
 ```{r}
 final_models_2022_complex <- list(
+  Boomkruiper = Boomkruiper_distmod_2022_hn1,
+  Bosrietzanger = Bosrietzanger_distmod_2022_hr2,
+  BruineKiekendief_zonder_broedcode = BruineKiekendief_zonder_broedcode_distmod_2022_hr1,
   Buizerd = Buizerd_distmod_2022_hr1,
-  Buizerd_zonder_broedcode = Buizerd_zonder_broedcode_distmod_2022_hr7,
+  Buizerd_zonder_broedcode = Buizerd_zonder_broedcode_distmod_2022_hr6,
   Ekster = Ekster_distmod_2022_hr1,
   Fazant = Fazant_distmod_2022_hr7,
   Gaai = Gaai_distmod_2022_hn1,
-  Geelgors = Geelgors_distmod_2022_hr1,
+  Geelgors = Geelgors_distmod_2022_hn5,
   GeleKwikstaart = GeleKwikstaart_distmod_2022_hr1,
   Grasmus = Grasmus_distmod_2022_hr10,
   GrauweGors = GrauweGors_distmod_2022_hn1,
   GroeneSpecht = GroeneSpecht_distmod_2022_hr1,
-  Groenling = Groenling_distmod_2022_hn1,
-  GroteBonteSpecht = GroteBonteSpecht_distmod_2022_hn1,
+  Groenling = Groenling_distmod_2022_hn2,
+  GroteBonteSpecht = GroteBonteSpecht_distmod_2022_hr2,
   GroteLijster = GroteLijster_distmod_2022_hn1,
   Haas = Haas_distmod_2022_hn3,
   Heggenmus = Heggenmus_distmod_2022_hn1,
-  Holenduif = Holenduif_distmod_2022_hn1,
-  Houtduif = Houtduif_distmod_2022_hr7,
-  Huismus = Huismus_distmod_2022_hn6,
-  Kauw = Kauw_distmod_2022_hn1,
+  Holenduif = Holenduif_distmod_2022_hn2,
+  Houtduif = Houtduif_distmod_2022_hn7,
+  Huismus = Huismus_distmod_2022_hn8,
+  Kauw = Kauw_distmod_2022_hn3,
   Kievit = Kievit_distmod_2022_hr1,
   KleineKarekiet = KleineKarekiet_distmod_2022_hr1,
-  Kneu = Kneu_distmod_2022_hn6,
-  Koolmees = Koolmees_distmod_2022_hn1,
+  Kneu = Kneu_distmod_2022_hr9,
+  Koolmees = Koolmees_distmod_2022_hn3,
   Kwartel = Kwartel_distmod_2022_hn1,
   Meerkoet = Meerkoet_distmod_2022_hr1,
   Merel = Merel_distmod_2022_hn7,
   Pimpelmees = Pimpelmees_distmod_2022_hn1,
   Rietzanger = Rietzanger_distmod_2022_hr1,
-  Ringmus = Ringmus_distmod_2022_hn1,
+  Ringmus = Ringmus_distmod_2022_hr1,
+  Roek = Roek_distmod_2022_hn1,
   Roodborst = Roodborst_distmod_2022_hn1,
   Roodborsttapuit = Roodborsttapuit_distmod_2022_hr1,
-  Spreeuw = Spreeuw_distmod_2022_hn1,
+  Spreeuw = Spreeuw_distmod_2022_hn3,
   Tjiftjaf = Tjiftjaf_distmod_2022_hn2,
-  Torenvalk = Torenvalk_distmod_2022_hr5,
-  Torenvalk_zonder_broedcode = Torenvalk_zonder_broedcode_distmod_2022_hr3,
-  TurkseTortel = TurkseTortel_distmod_2022_hr1,
-  Veldleeuwerik = Veldleeuwerik_distmod_2022_hr7,
-  Vink = Vink_distmod_2022_hn8,
+  Torenvalk = Torenvalk_distmod_2022_hn5,
+  Torenvalk_zonder_broedcode = Torenvalk_zonder_broedcode_distmod_2022_hn4,
+  TurkseTortel = TurkseTortel_distmod_2022_hr6,
+  Veldleeuwerik = Veldleeuwerik_distmod_2022_hr4,
+  Vink = Vink_distmod_2022_hn7,
   WildeEend = WildeEend_distmod_2022_hn1,
   Winterkoning = Winterkoning_distmod_2022_hr8,
-  WitteKwikstaart = WitteKwikstaart_distmod_2022_hn2,
-  Zanglijster = Zanglijster_distmod_2022_hn2,
-  ZwarteKraai = ZwarteKraai_distmod_2022_hr3,
-  ZwarteRoodstaart = ZwarteRoodstaart_distmod_2022_hn2,
-  Zwartkop = Zwartkop_distmod_2022_hn2
+  WitteKwikstaart = WitteKwikstaart_distmod_2022_hr2,
+  Zanglijster = Zanglijster_distmod_2022_hr2,
+  ZwarteKraai = ZwarteKraai_distmod_2022_hr5,
+  ZwarteRoodstaart = ZwarteRoodstaart_distmod_2022_hn4,
+  Zwartkop = Zwartkop_distmod_2022_hn1
 )
 ```
 
